// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 2.clickable 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 3.disabled 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M13.646,8.354c-1.319,1.317-1.975,1.976-3.293,3.293C10.159,11.841,10,11.775,10,11.5c0-1.015,0-1.618,0-2.5H3 C2.448,9,2,8.552,2,8s0.448-1,1-1h7c0-0.881,0-1.486,0-2.5c0-0.275,0.159-0.341,0.354-0.146c1.318,1.317,1.974,1.976,3.293,3.293 C13.841,7.841,13.841,8.159,13.646,8.354z"
  />
</Icon>
`;
